Fix layout issue with height

--- a/week05/my-app/src/App.css
+++ b/week05/my-app/src/App.css
@@ -59,7 +59,7 @@ table {
 }
 
 html, body {
-  min-height: 100%;
+  height: 100%;
   width: 100%;
   justify-content: center;
   font-family: "Ubuntu", sans-serif;
